restored seal of retainment. Added seal recipe

--- a/Magical Brewery/Magical Brewery - RP/texts/en_US.lang
+++ b/Magical Brewery/Magical Brewery - RP/texts/en_US.lang
@@ -69,7 +69,7 @@ item.magical_brewery:seal_potency_1.name=Seal of Potency I
 item.magical_brewery:seal_potency_2.name=§eSeal of Potency II
 item.magical_brewery:seal_expansion_1.name=Seal of Expansion I §c[W.I.P]
 item.magical_brewery:seal_expansion_2.name=§eSeal of Expansion II §c[W.I.P]
-item.magical_brewery:seal_retainment.name=Seal of Retainment §c[W.I.P]
+item.magical_brewery:seal_retainment.name=Seal of Retainment
 ##---------------------------------
 
 
