--- a/Magical Brewery/Magical Brewery - BP/changelog.txt
+++ b/Magical Brewery/Magical Brewery - BP/changelog.txt
@@ -1,22 +1,16 @@
 -----------------------------------------------
-v1.0.0
-Added:
-    Generation:
-    Scripts:
-    Blocks:
-    Entities:
-    Recipes:
-    Items:
+v0.3.2
 Updated:
     Generation:
     Scripts:
+        @minecraft/server bumped to "2.3.0-beta"
+        Fixed a bug where potions of Regeneration wouldn't work with casks
+        Updated casks to work with new Potion api changes
+        Updated tasting spoon has better feedback of initial potion in cask. This will be improved upon in the future
     Blocks:
+        Crystal cluster loottables now changed to check for item tags rather than fixed names. Hopefully modded pickaxes can be used with this
     Recipes:
     Items:
-Removed:
-    Generation:
-    Scripts:
-    Items:
-    Blocks:
 Author comment:
+Amazing timing of me to upload an addon just before a game drop.
 -----------------------------------------------
