--- a/Magical Brewery/Magical Brewery - RP/texts/en_US.lang
+++ b/Magical Brewery/Magical Brewery - RP/texts/en_US.lang
@@ -150,9 +150,42 @@ magical_brewery:seals_items=Cask Seals
 ##Author Comments: If a block isnt in the language file then it shouldnt be obtained in any non-survival means
 
 
+
+
+##---------------------------------
+##Cask tasting spoon Feedback
+magical_brewery:message.cask.tasting_spoon.empty=The cask is empty.
+magical_brewery:message.cask.tasting_spoon.initial_taste=The potion tastes of;
+magical_brewery:message.cask.tasting_spoon.cannot_age=It looks like the potion contains a similar effect as the cask, and cannot age.
+magical_brewery:message.cask.tasting_spoon.new_effect=It also has a taste of %s.
+magical_brewery:message.cask.tasting_spoon.aged=The potion has aged and is ready.
+magical_brewery:message.cask.tasting_spoon.aging.0=There is no taste of %s
+magical_brewery:message.cask.tasting_spoon.aging.1=It has the aroma of %s, but nothing substantial
+magical_brewery:message.cask.tasting_spoon.aging.2=The potion has a hint of %s
+magical_brewery:message.cask.tasting_spoon.aging.3=A good flavour of %s is present
+magical_brewery:message.cask.tasting_spoon.aging.4=Your tongue tingles to the strong flavour of %s, but it needs a touch longer
+magical_brewery:message.cask.tasting_spoon.aging=It still needs time to age.
+
+##---------------------------------
+##Tome Feedback
+magical_brewery:message.tome.chapter_pages.add=Maybe these pages can be added to a book.
+magical_brewery:message.tome.chapter_pages.owned=These chapters are already in your book.\nPerhaps you can share them with someone you trust. Or destroy these pages to stop prying hands.
+magical_brewery:message.tome.chapter_pages.added=You have added %s chapters to your Brewers' tome.
+magical_brewery:message.tome.chapter_pages.missing=Upon examining the book, it appears some of the pages are missing. There should be some chapters to be found.
+##---------------------------------
+
+##---------------------------------
+##Ageless Pocket Watch Feedback
+magical_brewery:message.ageless_pocket_watch.not_opped=You do not have the strength to use such an artifact!
+magical_brewery:message.ageless_pocket_watch.cask_cannot_age=Despite accelerating time, the cask cannot age.
+magical_brewery:message.ageless_pocket_watch.cask_aged=The watch has sped up time, and has aged the cask.
+##---------------------------------
+
+
 ##Tome Chapters--------------------
 magical_brewery:tome_chapter_main.title=Brewers' Tome
 magical_brewery:tome_chapter_main.body=If you have picked up this book, then either you have stolen it, in which case you should give it back to the rightful owner. Or you have been given this copy for very good reasons.\nSomeone must have seen great potential in you, and saw that you have an appreciation for the arts of alchemy.\nIn that case, I welcome you to the art of §6Magical Brewery§r! This book contains knowledge that will grow you as an alchemist and as a brewer. Throughout this book, you will uncover newly discovered magicks that will bring wonder to those around you.\nAre you ready? Then let us begin...
+##---------------------------------
 
 ##---------------------------------
 ##Tome Chapters-----Crystallography---------------
@@ -218,3 +251,8 @@ magical_brewery:tome_chapter_seal_retainment.body=Unlike other seals, the seal o
 
 magical_brewery:tome_chapter_author.title=About the Author
 magical_brewery:tome_chapter_author.body=Once again, welcome to Magical Brewery. Let's rip the plaster off and say it how it is. This is the mod/addon author talking directly to you(the player).\nFrom here on this page will be a wall of text and will contain potential spoilers about the addon.\n\nI'm pleased to see you have downloaded the add-on. If you have got this book through survival means then you are certainly curious, which is what I would like.\nThis addon is currently in an alpha state(v0.3), so there will be bugs and features maybe missing or incomplete(see seals of expansion).\nI am aware of 1 bug which is that the cask sometimes doesn't register that it's there.(Re-placing the cask will resolve the issue) I have an easy fix, but I want to know WHY it's happening rather than use duct tape as a solution.\n\nSpeaking of bugs, if you have any issues, you can submit the issues here at my github:\n §bhttps://github.com/zellfrey/Magical-Brewery §r  \n\nAnd if you would like to sing praise or throw rotten tomatoes at me, you can either make a comment on the curseforge page:\n §bhttps://www.curseforge.com/minecraft-bedrock/addons/magical-brewery §r \n\nOr whisper into my ear on discord:\nBeardedflea\n\nThank you for your patience, and enjoy the addon.
+
+##---------------------------------
+##Magical Brewery general messages 
+magical_brewery:message.magical_brewery_general.wip=§cCurrently unavailable. Functionality will be added at a later date.
+##---------------------------------
