fixed brewers tome type

--- a/Magical Brewery/Magical Brewery - RP/texts/en_US.lang
+++ b/Magical Brewery/Magical Brewery - RP/texts/en_US.lang
@@ -272,7 +272,7 @@ magical_brewery:tome_chapter_author.body=Once again, welcome to Magical Brewery.
 ##---------------------------------
 ##Tome Chapters-----Brewing-------------------
 magical_brewery:tome_chapter_brewing.title=Brewing
-magical_brewery:tome_chapter_brewing.body=I have been at this "magical brewing" for quite some time now, and I haven't come across any brewing chapter. So from now on I think I will have to do my own research and continue where Malgrith left off from.\nThis will be the brewing chapter and it will be my own work and so I will have to be concise and thorough as to not trip over myself in the future.
+magical_brewery:tome_chapter_brewing.body=I have been at this "magical brewing" for quite some time now, and I haven't come across any brewing chapter. So from now on I think I will have to do my own research and continue where Margrith left off from.\nThis will be the brewing chapter and it will be my own work and so I will have to be concise and thorough as to not trip over myself in the future.
 
 magical_brewery:tome_chapter_enhanced_potions.title=Enhanced Potions
 magical_brewery:tome_chapter_enhanced_potions.body=Now that I have pure versions of dusts, I should be able to enhance base potions far more than the non-pure variants.\nIf the dust can be applied to aging then surely they should work for brewing.\nAfter a lot of tests, I have found that the majority of potions that accept non-pure dusts also accept the purified dusts and as a consequence to using purified dust, the potion liquid now has a lovely shimmer to it reflecting light creating a mild glinting effect.\nI need to make more notes on this so I don't forget what I have discovered.
