--- a/Magical Brewery/Magical Brewery - RP/texts/en_US.lang
+++ b/Magical Brewery/Magical Brewery - RP/texts/en_US.lang
@@ -338,6 +338,9 @@ magical_brewery:tome_chapter_ageing.body=In traditional brewing there are two ma
 magical_brewery:tome_chapter_casks.title=Casks
 magical_brewery:tome_chapter_casks.body=To begin ageing potions you need to create woods that are stained with potion effects. Any wooden plank will work.\nTo craft a cask, you will need 6 stained wood planks and 2 iron ingots. The stained planks need to have the same effect. All of the cask recipes can be found in the Crafting Menu.\n\nA cask can only have one type of potion inside, and a potion that has the same effect as the cask will not trigger the ageing process.\n\nThe aging process will usually take about a day to complete. This time is increased depending on the amount of potion effects contained in a cask.\n\nTo check how long the potion needs to age, you can use a tasting spoon to well... taste the contents.\nOnce the cask contents have aged, you can pour the contents into a bottle. You should now have a potion with 2 unique effects.
 
+magical_brewery:tome_chapter_cask_degrading.title=Cask Degrading
+magical_brewery:tome_chapter_cask_degrading.body=body
+
 magical_brewery:tome_chapter_theories_cask_effects.title=Theories: Cask Effects
 magical_brewery:tome_chapter_theories_cask_effects.body=As you have probably found out, there is no recipe for cask of the Turtle Master. Unfortunately I couldn't find a simple method to extract the effects of a turtle master potion properly. All attempts yielded no results.\n\nMy suspicion is that due to the potion containing mixed effects, the magic is diluted and lacks the ability to impart these effects to any potion in a cask\n\nI have an idea to split these effects, which may also help bring out magicks from other sources, but currently I have nothing to show. If I do make any progress, I will send a message your way.
 
@@ -363,6 +366,12 @@ magical_brewery:tome_chapter_seal_expansion.body=This seal can be applied to cas
 
 magical_brewery:tome_chapter_seal_retainment.title=Seal of Retainment
 magical_brewery:tome_chapter_seal_retainment.body=Unlike other seals, the seal of retainment does not affect the cask effect being applied to the liquid contents. Instead it can be used to prevent casks from degrading in quality. As with most seals, it will burn away once used.\nSeals of retainment are crafted using amethyst shards.
+
+magical_brewery:tome_chapter_seal_memories.title=Seal of Memories §c[W.I.P]
+magical_brewery:tome_chapter_seal_memories.body=A strange seal, one that seems to remember the previous state of a cask. If applied to a cask that has degraded in quality, once the aging process is complete, it will actually "repair" the cask bringing back some of the stained effect back into the cask.\nSeals of memories can be crafted with echo shards.
+
+magical_brewery:tome_chapter_seal_inspiration.title=Seal of Inspiration §c[W.I.P]
+magical_brewery:tome_chapter_seal_inspiration.body=Sometimes a lending hand in work is always appreciated. I've heard whispers from the eyes of enders that I have collected over the weeks. And I thought it may be possible to apply their alien thoughts to a productive activity. By using them in seals they show boundless creativity but it's unruly. However the treasures gained are greater than any mountain of gold.\nSeals of Inspiration can be crafted with eyes of ender.
 
 magical_brewery:tome_chapter_author.title=About the Author
 magical_brewery:tome_chapter_author.body=Once again, welcome to Magical Brewery. Let's rip the plaster off and say it how it is. This is the mod/addon author talking directly to you(the player).\nFrom here on this page will be a wall of text and will contain potential spoilers about the addon.\n\nI'm pleased to see you have downloaded the add-on. If you have got this book through survival means then you are certainly curious, which is what I would like.\nThis addon is currently in an alpha state(v0.3.6), so there will be bugs and features maybe missing or incomplete(see seals of expansion).\nIf you have any issues, you can submit the issues here at my github:\n §bhttps://github.com/zellfrey/Magical-Brewery §r  \n\nAnd if you would like to sing praise or throw rotten tomatoes at me, you can either make a comment on the curseforge page:\n §bhttps://www.curseforge.com/minecraft-bedrock/addons/magical-brewery §r \n\nOr whisper into my ear on discord:\nBeardedflea\n\nThank you for your patience, and enjoy the addon.
